--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '14.x'
       - name: Build teste-payment
         run: |
-          npm ci
+          npm install -f
           npm run build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
