--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,15 +8,21 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: '14.x'
+
       - name: Build teste-payment
         run: |
-          npm install -f
+          npm install
           npm run build
+
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
