ajuste no deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "teste-payment",
   "hostname": "teste-payment",
+  "homepage": "https://joaopaulofernandesb.github.io/teste-payment/",  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
