--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 always-auth = true
 @labs:registry=https://gitlab.gazin.com.br/api/v4/packages/npm/
-//gitlab.gazin.com.br/api/v4/packages/npm/:_authToken=DBZs4BxSkowTTLGzah_X
-//gitlab.gazin.com.br/api/v4/projects/209/packages/npm/:_authToken=DBZs4BxSkowTTLGzah_X
+//gitlab.gazin.com.br/api/v4/packages/npm/:_authToken=${TOKEN_PAYMENT_COMPONENT}
+//gitlab.gazin.com.br/api/v4/projects/209/packages/npm/:_authToken=${TOKEN_PAYMENT_COMPONENT}
