--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 always-auth = true
 @labs:registry=https://gitlab.gazin.com.br/api/v4/packages/npm/
-//gitlab.gazin.com.br/api/v4/packages/npm/:_authToken=${TESTE_TOKEN}
-//gitlab.gazin.com.br/api/v4/projects/209/packages/npm/:_authToken=${TESTE_TOKEN}
+//gitlab.gazin.com.br/api/v4/packages/npm/:_authToken=${NPM_TOKEN}
+//gitlab.gazin.com.br/api/v4/projects/209/packages/npm/:_authToken=${NPM_TOKEN}
