ajuste no deploy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Configure SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-
       - name: Set up environment variables
         run: echo "NPM_TOKEN=${{ secrets.TESTE_TOKEN }}" >> $GITHUB_ENV
 
@@ -36,6 +29,6 @@ jobs:
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.TESTE_TOKEN }}
+          github_token: ${{ secrets.TOKEN_ADMIN }}
           publish_dir: ./build
 
